@@ -8,6 +8,7 @@ Current Release
 - Made dnsrmhost require the target, fixed unittest.
 - Fixed @ targets
 - Added dnslsacl tool
+- Added dnsrmacl tool
 
 2010-01-27 release-0.11
 - Fixed dnsmkacl warning with no arguments
